# sonobe-playground

./: .gitignore  Cargo.toml  Makefile  README.md  analysis.py  rust-toolchain.toml
circuit/: grayscale_step.circom
src/: circuit.rs  folding.rs  input.rs  logging.rs  main.rs  scenario_config.rs
